fix: make scrollbars less visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,17 @@ html {
   height: 100vh;
   overflow: hidden;
 }
+
+/* For WebKit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+  width: 6px; /* width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* color of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.15); /* color of the thumb */
+  border-radius: 6px; /* rounded corners of the thumb */
+}
